# VoiceMate

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  pytest.ini  requirements-docker.txt  requirements.txt
.github/workflows/: test.yml
.streamlit/: credentials.toml
extracted_content/: extraction_report.txt  llm_content.txt  metadata.json
src/: app.py  app_test.py
src/backend/: llm.py
src/common/: CONSTANTS.py  constants.py
src/file_parser/: fileparser.py  other_files_parser.py  pdf_content_formatter.py  pdf_image_extractor.py  pdf_parser.py  url2pdf.py
src/logic/: Azure_TTS.py  Elevenlabs_TTS.py  llm_podcast.py  llm_text_test_file.txt  text_into_json.py  tts.py
src/prompts/: casual_style.txt  image_describer.txt  plan_prompt.txt  scientific_style.txt
src/services/: llm_service.py
src/ui/: sidebar.py
src/ui/steps/: step0_homepage.py  step1_upload.py  step2_plan.py  step3_and4.py  step3_podcast.py  step4_json.py  step5_audio.py  step_all.py
src/utils/: blob_uploader.py  content_safety.py  extract_tables.py  image_describer.py  key_vault.py  logging_config.py  text_cleaner.py
src/workflow/: generation.py  process_file.py  save.py  session.py
test_data/: sample.docx  sample.html  sample.md  sample.pptx  sample.txt
tests/: __init__.py  conftest.py  test_env.py  test_generate_plan.py  test_generate_podcast.py  test_prompts.py
tests/e2e/: file_upload_test.py  quick_mode_test.py  test_file_upload.py
tests/logic/: Azure_TTS_test.py  Elevenlabs_TTS_test.py  llm_podcast_test.py  test_env.py  test_generate_plan.py  test_generate_podcast.py  test_prompts.py
tests/parser/: __init__.py  other_files_parser_test.py  pdf_content_formatter_test.py  pdf_image_extractor_test.py  pdf_parser_test.py  test_pdf_parser.py  url2pdf_test.py
tests/services/: llm_service_test.py
tests/ui/: app_test.py  sidebar_test.py  step0_homepage.py  step1_upload_test.py  step2_plan_test.py  step3_and4_test.py  step5_audio_test.py  step_all_test.py
tests/utils/: blob_uploader_test.py  content_safety_test.py  extract_tables_test.py  image_describer_test.py  logging_config.py  logging_config_test.py  test_extract_tables.py  test_text_cleaner.py  text_cleaner_test.py
tests_e2e/: __init__.py  conftest.py  file_upload_teste2e.py  quick_mode_teste2e.py
