[project]
name = "voicemate"
version = "0.1.0"
description = "Browser-based AI tool for creating, scientific and hobby audio podcasts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-storage>=0.37.0",
    "langchain-core~=0.3.65",
    "langchain-openai~=0.3.23",
    "python-dotenv>=1.1.0",
    "streamlit~=1.45",
]
